# BiBEAM

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .taplo.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  cliff.toml  clippy.toml  cog.toml  deny.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
crates/bibeam-cli/: Cargo.toml  README.md
crates/bibeam-cli/src/: cli.rs  config.rs  ech.rs  exit_pick.rs  main.rs  multihop.rs  register.rs  rotation.rs  socks5_fallback.rs  tun_setup.rs
crates/bibeam-coordinator/: Cargo.toml  README.md
crates/bibeam-coordinator/src/: admission.rs  admission_gate.rs  audit.rs  cluster.rs  cohorts.rs  health.rs  invite_admission.rs  lib.rs  log_hooks.rs  main.rs  rate_limit.rs  registry.rs  rotation.rs
crates/bibeam-coordinator/tests/: admission_e2e.rs
crates/bibeam-core/: Cargo.toml  README.md
crates/bibeam-core/src/: claims.rs  error.rs  identity.rs  ids.rs  lib.rs  redaction.rs  time.rs
crates/bibeam-crypto/: Cargo.toml  README.md
crates/bibeam-crypto/src/: aead.rs  eq.rs  identity_key.rs  invite.rs  kdf.rs  lib.rs  token.rs  wg_keys.rs
crates/bibeam-crypto/tests/: aead_adversarial.rs  kdf_adversarial.rs  token_adversarial.rs  zeroize_audit.rs
crates/bibeam-discovery/: Cargo.toml  README.md
crates/bibeam-discovery/src/: bootstrap.rs  error.rs  failover.rs  http.rs  invite_validator.rs  lib.rs  pkarr_fallback.rs  records.rs  ws.rs
crates/bibeam-discovery/tests/: bootstrap_happy_path.rs  invite_adversarial.rs
crates/bibeam-node/: Cargo.toml  README.md
crates/bibeam-node/src/: cohort_ws.rs  dns.rs  exit_mode.rs  forwarder.rs  lib.rs  main.rs  quic_server.rs  rate_limit.rs  registration.rs  rotation_handler.rs  telemetry.rs
crates/bibeam-node/src/coordinator/: admission.rs  admission_gate.rs  audit.rs  cluster.rs  cohorts.rs  geoip_verify.rs  health.rs  log_hooks.rs  mod.rs  multihop.rs  rate_limit.rs  region_verify.rs  registry.rs  rotation.rs  server.rs
crates/bibeam-node/tests/: admission_gate_characterization.rs  coordinator_admission_e2e.rs  geoip_verify_e2e.rs  multihop_e2e.rs  rate_limit_characterization.rs  region_routing_e2e.rs  registration_token_adversarial.rs
crates/bibeam-node/tests/helpers/: mod.rs
crates/bibeam-protocol/: Cargo.toml  README.md
crates/bibeam-protocol/src/: claims.rs  codec.rs  cohort.rs  control.rs  error.rs  frame.rs  lib.rs  multihop.rs  tunnel.rs
crates/bibeam-protocol/tests/: codec_adversarial.rs  codec_roundtrip.rs
crates/bibeam-runtime/: Cargo.toml  README.md
crates/bibeam-runtime/src/: alloc.rs  config.rs  health.rs  lib.rs  log.rs  metrics.rs  redaction_layer.rs  shutdown.rs  signal.rs
crates/bibeam-transport/: Cargo.toml  README.md
crates/bibeam-transport/src/: holepunch.rs  lib.rs  peer_config.rs  rate_limit.rs  relay.rs  socks5.rs  stun.rs  telemetry.rs  tls.rs  wg_tunnel.rs
crates/bibeam-transport/tests/fixtures/: wg_quick_peer.conf
crates/bibeam-tun/: Cargo.toml  README.md
crates/bibeam-tun/src/: backpressure.rs  device.rs  flow.rs  inbound.rs  lib.rs  mtu.rs  outbound.rs  parser.rs
crates/bibeam-tun/tests/: dual_stack.rs  parser_adversarial.rs
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: main.rs
docs/: architecture.md  operator-runbook.md  protocol.md  threat-model.md
docs/plan/: init.md  tasks.md
