[package]
name = "bibeam-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "End-user client daemon and CLI."

[[bin]]
name = "bibeam"
path = "src/main.rs"

[dependencies]
bibeam-core = { workspace = true }
bibeam-protocol = { workspace = true }
bibeam-crypto = { workspace = true }
bibeam-transport = { workspace = true }
bibeam-tun = { workspace = true }
bibeam-discovery = { workspace = true }
bibeam-runtime = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true } # required by the shared bin main.rs subscriber init (§5 main.rs skeleton)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Linux-only capability inspection. The `caps` crate ships no
# macOS / Windows targets, so `setup_tun()`'s privilege guard
# pulls it in only when the build target is Linux. The matching
# code is also `#[cfg(target_os = "linux")]`-gated.
[target.'cfg(target_os = "linux")'.dependencies]
caps = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
# `caps` is a target-gated dependency that machete cannot detect from cfg-blocked Rust;
# list it explicitly so the workspace `cargo machete` gate stays green on every host OS.
ignored = ["bibeam-core", "bibeam-protocol", "bibeam-crypto", "bibeam-transport", "bibeam-tun", "bibeam-discovery", "bibeam-runtime", "figment", "thiserror", "caps"]
