[package]
name = "bibeam-coordinator"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Rendezvous and matchmaker daemon (axum + redb)."

[[bin]]
name = "bibeam-coordinator"
path = "src/main.rs"

[dependencies]
bibeam-core = { workspace = true }
bibeam-protocol = { workspace = true }
bibeam-crypto = { workspace = true }
bibeam-discovery = { workspace = true }
bibeam-runtime = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
governor = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true } # required by the shared bin main.rs subscriber init (§5 main.rs skeleton)
thiserror = { workspace = true }
anyhow = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
time = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["bibeam-core", "bibeam-protocol", "bibeam-crypto", "bibeam-discovery", "bibeam-runtime", "axum", "tower", "tower-http", "redb", "serde", "serde_json", "postcard", "governor", "parking_lot", "dashmap", "thiserror", "mimalloc"]
