[package]
name = "bibeam-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Shared types, errors, and identity primitives."

[dependencies]
blake3 = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
ulid = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["blake3", "bytes", "serde", "thiserror", "time", "ulid", "zeroize"]
