[package]
name = "bibeam-crypto"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Key and keying-material helpers: x25519 peer keys, control-plane chacha20-poly1305 aead, ed25519 identity keypair with pkcs#8 pem persistence."

[dependencies]
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true, features = ["pkcs8", "pem"] }
chacha20poly1305 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
