[package]
name = "bibeam-discovery"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Coordinator client and rendezvous types."

[dependencies]
bibeam-core = { workspace = true }
bibeam-protocol = { workspace = true }
bibeam-crypto = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
rustls = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
ed25519-dalek = { workspace = true }
time = { workspace = true }
pkarr = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
hyper = { workspace = true }
pasetors = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
# bytes is also a non-test workspace dep above; the dev side re-uses
# the same crate to build axum Bytes responses in tests.

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["bibeam-core", "bibeam-protocol", "bibeam-crypto", "tokio", "reqwest", "tokio-tungstenite", "futures-util", "rustls", "url", "serde", "serde_json", "postcard", "base64", "blake3", "bytes", "ed25519-dalek", "time", "pkarr", "thiserror", "tracing"]
