[package]
name = "bibeam-node"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Dual-role relay and exit daemon."

[lib]
name = "bibeam_node"
path = "src/lib.rs"

[[bin]]
name = "bibeam-node"
path = "src/main.rs"

[dependencies]
bibeam-core = { workspace = true }
bibeam-protocol = { workspace = true }
bibeam-crypto = { workspace = true }
bibeam-transport = { workspace = true }
bibeam-tun = { workspace = true }
bibeam-discovery = { workspace = true }
bibeam-runtime = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
fast-socks5 = { workspace = true }
hickory-resolver = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true } # required by the shared bin main.rs subscriber init (§5 main.rs skeleton)
thiserror = { workspace = true }
anyhow = { workspace = true }
mimalloc = { workspace = true }
# --- absorbed from the dissolved bibeam-coordinator crate (R-MERGE.1; §11 R-1) ---
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
time = { workspace = true }
blake3 = { workspace = true }
ulid = { workspace = true }
governor = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
# --- absorbed from the dissolved bibeam-coordinator crate (R-MERGE.1; §11 R-1) ---
pasetors = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["bibeam-core", "bibeam-protocol", "bibeam-crypto", "bibeam-transport", "bibeam-tun", "bibeam-discovery", "bibeam-runtime", "tokio-util", "fast-socks5", "hickory-resolver", "thiserror", "mimalloc", "axum", "tower", "tower-http", "redb", "serde", "serde_json", "postcard", "time", "blake3", "ulid", "governor", "parking_lot", "dashmap"]
