[package]
name = "bibeam-node"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Dual-role relay and exit daemon."

[lib]
name = "bibeam_node"
path = "src/lib.rs"

[[bin]]
name = "bibeam-node"
path = "src/main.rs"

[dependencies]
bibeam-core = { workspace = true }
bibeam-protocol = { workspace = true }
bibeam-crypto = { workspace = true }
bibeam-transport = { workspace = true }
bibeam-tun = { workspace = true }
bibeam-discovery = { workspace = true }
bibeam-runtime = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
fast-socks5 = { workspace = true }
hickory-resolver = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true } # required by the shared bin main.rs subscriber init (§5 main.rs skeleton)
thiserror = { workspace = true }
anyhow = { workspace = true }
mimalloc = { workspace = true }
# --- absorbed from the dissolved bibeam-coordinator crate (R-MERGE.1; §11 R-1) ---
axum = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
time = { workspace = true }
blake3 = { workspace = true }
ulid = { workspace = true }
governor = { workspace = true }
parking_lot = { workspace = true }
# --- F-NODE.8 node data-plane rate limiter: per-cohort + per-peer DashMap of
# `DefaultDirectRateLimiter` instances. Distinct from coord rate limiting
# (F-COORD.9), which keys on source IP + PeerId via governor's keyed limiter. ---
dashmap = { workspace = true }
# --- GeoIP cross-check (R-REGION.2 / D-5): operator-supplied GeoLite2-Country DB ---
maxminddb = { workspace = true }
# --- multi-hop path-assembly (R-MULTIHOP-COORD) — WgPeerConfig.allowed_ips uses IpNet;
# also consumed by R-REGION.3 for mismatch_allowlist_cidrs parsing. ---
ipnet = { workspace = true }
# --- R-MULTIHOP-NODE forwarder mode: per-pair routing table metrics + frame bytes ---
metrics = { workspace = true }
bytes = { workspace = true }
# --- F-NODE.4 exit-mode: module-private `TunPacketSink` trait needs object-safe async fn (used via `Box<dyn …>`) ---
async-trait = { workspace = true }
# --- F-NODE.6 rotation handler: lock-free atomic swap of `Arc<CohortLive>`
# on `CohortRotated` events; consumed by `rotation_handler::RotationHandler`. ---
arc-swap = { workspace = true }
# --- F-NODE.2 Quinn server accept loop: wraps a `quinn::Endpoint` per-connection
# handler in a cancel-aware loop. Cohort-traffic relay + WG-datagram-forward
# share this primitive as the inbound surface. ---
quinn = { workspace = true }
# --- F-NODE.5 cohort-WS receiver: backoff jitter draws from rand 0.10's thread-local RNG.
# The reconnect loop uses `rng().random_range(0..jitter_ms)` to add `[0, jitter_ms)` ms
# of noise on top of the deterministic exponential schedule so a fleet of nodes
# does not synchronise reconnect storms against a recovering coordinator pool. ---
rand = { workspace = true }
# --- F-NODE.5 cohort-WS receiver: `CoordinatorWs::connect` consumes
# `Arc<rustls::ClientConfig>`. The shared TLS config is built once by
# `bibeam_transport::coordinator_client_config` at startup and threaded through to
# every reconnect attempt; this crate names the type on the public
# `CohortWsReceiver` constructor so callers wire it without a transport-internal cast. ---
rustls = { workspace = true }

[dev-dependencies]
# --- absorbed from the dissolved bibeam-coordinator crate (R-MERGE.1; §11 R-1) ---
pasetors = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
# --- F-NODE.2 in-process accept-loop tests: mint a self-signed cert for the
# `quinn::Endpoint::server` bind + the in-process `quinn` client that drives
# the loop. Production cert provisioning is F-TRANS.2's concern. ---
rcgen = { workspace = true }
rustls = { workspace = true }
# --- coordinator/server.rs tests use `tower::ServiceExt as _` to drive the axum
# `Router` directly in-process; this is test-only — axum provides `ServiceExt`
# transitively in production via its own tower dep. (Demoted from `[dependencies]`
# per X-1 cleanup sweep finding; verified zero non-test uses.) ---
tower = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["bibeam-core", "bibeam-protocol", "bibeam-crypto", "bibeam-transport", "bibeam-tun", "bibeam-discovery", "bibeam-runtime", "tokio-util", "fast-socks5", "thiserror", "mimalloc", "axum", "redb", "serde", "serde_json", "postcard", "time", "blake3", "ulid", "governor", "parking_lot", "rustls"]
