[package]
name         = "bibeam-runtime"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
description  = "Shared runtime: tracing, metrics, config, signals, health for BiBEAM."

[dependencies]
bibeam-core                 = { workspace = true }
tokio                       = { workspace = true }
tokio-util                  = { workspace = true }
tracing                     = { workspace = true }
tracing-subscriber          = { workspace = true }
tracing-error               = { workspace = true }
metrics                     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
figment                     = { workspace = true }
clap                        = { workspace = true }
axum                        = { workspace = true }
tower-http                  = { workspace = true }
serde                       = { workspace = true }
thiserror                   = { workspace = true }
anyhow                      = { workspace = true }

[lints]
workspace = true
